log/build_2025-02-10_19-32-31/controller/stderr.log
  File "/home/daniel/controlbot_ws/install/controller/lib/python3.10/site-packages/controller/hw_interface.py", line 55
    self.serial_port.write(2.tobytes(1,'big')           
                            ^
SyntaxError: invalid decimal literal

